Fixed userlist alignment issue

--- a/src/components/UserList/UsersList.css
+++ b/src/components/UserList/UsersList.css
@@ -10,11 +10,17 @@
   flex: 1;
   display: flex;
   flex-direction: row;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid gray;
+  background: #eeeeee;
 }
 .event-name {
   flex: 3;
   font-weight: bold;
   padding-left: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .reset-event {
   flex: 1;
